# ListFriend

./: .breakpoints  OLDDATABASESYSTEML+CRINGE+RATIO.py  README.md  database.json  main.py  project-outline.txt  pyproject.toml  webserver.py
templates/: index.html
