[tool.poetry]
name = "discord-bot-template"
version = "0.1.0"
description = "Organize groups of friends into tags!"
authors = ["den :)"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
